<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_emotion_select_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background"
    android:gravity="center"
    tools:context=".ui.diary.dialog.FragmentEmotionSelect">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@android:color/transparent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="Select your emotion!"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rg_emotion_select_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_emotion_1"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableTop="@drawable/selector_emoji_anger"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/emotion_angry"
                        android:textAlignment="center"
                        android:textColor="@drawable/selector_emotion_text"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rb_emotion_2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="false"
                        android:drawableTop="@drawable/selector_emoji_disgust"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/emotion_disgust"
                        android:textAlignment="center"
                        android:textColor="@drawable/selector_emotion_text"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rb_emotion_3"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="false"
                        android:drawableTop="@drawable/selector_emoji_fear"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/emotion_fear"
                        android:textAlignment="center"
                        android:textColor="@drawable/selector_emotion_text"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rb_emotion_4"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="false"
                        android:drawableTop="@drawable/selector_emoji_joy"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/emotion_joy"
                        android:textAlignment="center"
                        android:textColor="@drawable/selector_emotion_text"
                        android:textSize="12sp" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rg_emotion_select_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">

                    <RadioButton
                        android:id="@+id/rb_emotion_5"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="false"
                        android:drawableTop="@drawable/selector_emoji_neutral"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/emotion_neutral"
                        android:textAlignment="center"
                        android:textColor="@drawable/selector_emotion_text"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rb_emotion_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="false"
                        android:drawableTop="@drawable/selector_emoji_sadness"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/emotion_sadness"
                        android:textAlignment="center"
                        android:textColor="@drawable/selector_emotion_text"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rb_emotion_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="false"
                        android:drawableTop="@drawable/selector_emoji_surprise"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/emotion_surprise"
                        android:textAlignment="center"
                        android:textColor="@drawable/selector_emotion_text"
                        android:textSize="12sp" />

                </RadioGroup>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_emotion_select"
                style="@style/BUTTON_TEXT_STYLE"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="22dp"
                android:layout_marginVertical="26dp"
                android:background="@drawable/selector_select_button"
                android:enabled="false"
                android:text="@string/select"
                android:textColor="@drawable/selector_button_text"
                android:textSize="16sp"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>